--- a/style.css
+++ b/style.css
@@ -1,4 +1,200 @@
-nav  
-{border-bottom: 1px solid black; }
+/* retirer les balles et les marge de remplissage */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 90px;
+    background-color: #e6c69d;
+}
+
+/* barre de naviation verticale */
+li a {
+    display: block;
+    color: #ebc310e3;
+    padding: 8px 0 8px 16px;  
+    text-decoration: none;
+}
+
+/* changer la couleur du lien en flotage */
+li a:hover {
+    background-color: chartreuse;
+    color: white;
+}
+
+/* ajouter une classe active aux liens de la barre */
+.active {
+    background-color: yellow;
+    color: white;
+}
+
+/* centrer les liens et ajouter des bordures */
+ul {
+    border: 1px solid #555;
+}
+li {
+    text-align: center;
+    border-bottom: 1px solid #555;
+} 
+
+/* police roboto */
+li {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-size: 32px;
+    color: rgb(187, 117, 25);
+}
+
+/* en utilisant l'attribut class en html pour changer la couleur du paragraphe */
+.green {
+    color: green;
+
+}
+article>p {
+    font-weight: bold;
+    background-color: #a35454;
+    color: #ada9a9;
+    padding:.8em;
+}
+    /* combinateur */
+    /* combinateur descendant */
+    .box p {
+        color: cadetblue;
+    }
+    /* combinateur enfants */
+    
+/* combinateur general de freres et soeurs */
+h1+p {
+    font-weight: bold;
+    background-color: #ada9a9;
+    color: #a35454;
+    padding: .5em;
+    
+}
+    /* combinateur  */
+h1+p
+    {
+    border-bottom:1px solid black; 
+    }
 .crumbs ol {list-style-type: none; padding-left: 0;}
 .crumbs {display: inline-block;}
+h4 {
+    
+    color: black;
+    
+}
+h4+p {
+    background-color: #cc9d66;
+    color: black;
+    padding: 1em;
+
+    
+}
+.title{
+    color: rgb(148, 127, 9);
+} 
+
+
+h3 
+.red,#redElement {
+    color: rgb(100, 51, 51);
+} 
+/* combinateur de freres et soeurs adjacents */
+h3+p {
+    font-weight: bold;
+    background-color: darkkhaki;
+    color: black;
+    padding: 3em;
+}
+article>p {
+    font-weight: bold;
+    background-color: darkgrey;
+    color: #fff;
+    padding: 5em
+}
+
+h5 {
+    border: 1px rgb(0, 0, 0);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    color: red;
+}
+
+/* combinateur general de freres et soeurs */
+h2~p {
+    font-weight: bold;
+    background: #ada9a9;
+    color: black;
+    padding: 1em;
+
+}
+    
+/* bordure */
+#red-bordered {
+    border: 2px dashed;
+    height: 25px; width: 40px;
+} 
+
+/* pseudo-classe CSS */
+a:link {
+color: rgb(8, 151, 27);
+}
+a:visited {
+    color: tomato;
+}
+/* pour que le texte clignote en couleur */
+div:hover {
+    color: tomato;
+}
+a:active {
+    color: greenyellow;
+}
+ 
+/* Modele de boite CSS */
+.box {
+    padding: padding: top: 50px; padding: :right 50px; padding: bottom: 50px; padding: :left 50px;
+}
+
+/* Marge */
+div{
+margin-top: 20px; 
+margin-bottom: 30px;
+margin-left: 25px; 
+margin-right: 40px;
+}
+
+/* Frontiere */
+.box-1 {
+    border: none;
+}
+.box-2 {
+    border: 5px red;
+}
+.box-3 {
+    border: 5px solid orange;
+}
+.box-4 {
+    border: 5px dashed orange;
+}
+.box-5 {
+    border: dotted orange;
+}
+.box-6 {
+    border: double orange;
+}
+.box-7 {
+    border: groove orange;
+}
+.box-8 {
+    border: ridge orange;
+}
+.box-9 {
+    border: inset orange;
+}
+.box-10 {
+    border: outset orange;
+}
+
