--- a/style.css
+++ b/style.css
@@ -1,11 +1,85 @@
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #71c2e2;
+    color: #faf604;
+  }
+  
+  /* cibler des tailles d'ecran specifiques */
+  @media screen and (max-width:300px) {
+/* ecrire le CSS dans le block-code */
+    }
+
+    @font-face {
+        font-family: "chathurabold";
+        src: url("../font/chathura_bold_macroman/chachathura-bold-webfont.eot");
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    /* nouvelles polices interessante */
+    @font-face {
+        font-family: "chathurabold";
+        src: url("../font/chathura_bold_macroman/chachathura-bold-webfont.eot");
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    #paragraphe1 {
+        border-bottom-style: inset;
+        border-width: 0.5px;
+        border-color: black;
+        border-top-style: groove;
+    }
+
+
+/* Relative vs Absolue */
+.box-1, .box-2, .box-3, .box-4 {
+    display: block;
+    justify-content: center
+    align-items: center;
+    
+}
+.box-1 {
+    padding: 20px;
+    margin: 1px;
+    width: 300px;
+    height: 250px;
+    background: #b7d473;
+    position: relative;
+    left: 30px;
+
+    align-items: center;
+}
+
+.box-2 {
+    padding: 20px;
+    width: 200px;
+    height: 200px;
+    background: #fad;
+}
+.box-2 {
+    position: absolute;
+    top: 0px;
+    right: 30px;
+}
+.box-3 {
+    position: absolute;
+    padding: 20px;
+    width: 200px;
+    height: 200px;
+    top: 0px;
+    left: 30px;
+    background-color: rgb(204, 64, 64);
+}
+
 /* retirer les balles et les marge de remplissage */
-ul {
+ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 90px;
     background-color: #e6c69d;
-}
+} 
 
 /* barre de naviation verticale */
 li a {
@@ -33,7 +107,7 @@ ul {
 }
 li {
     text-align: center;
-    border-bottom: 1px solid #555;
+    border-bottom: 1px solid #080808;
 } 
 
 /* police roboto */
@@ -45,7 +119,8 @@ h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;  
     font-size: 32px;
-    color: rgb(187, 117, 25);
+    color: rgb(117, 114, 109);
+    
 }
 
 /* en utilisant l'attribut class en html pour changer la couleur du paragraphe */
@@ -71,45 +146,49 @@ h1+p {
     font-weight: bold;
     background-color: #ada9a9;
     color: #a35454;
-    padding: .5em;
+    margin: 1%;
+    padding: 1%;
     
 }
     /* combinateur  */
 h1+p
     {
-    border-bottom:1px solid black; 
+        
     }
-.crumbs ol {list-style-type: none; padding-left: 0;}
-.crumbs {display: inline-block;}
-h4 {
+    .crumbs ol {list-style-type: none; padding-left: 0;}
+    .crumbs {display: inline-block;}
+    h4 {
+        
+        color: black;
+        
+    }
+    h4+p {
+        background-color: #cc9d66;
+        color: black;
+        padding: 1em;
+        
+        
+    }
+    .title{
+        color: rgb(148, 127, 9);
+    } 
     
-    color: black;
     
-}
-h4+p {
-    background-color: #cc9d66;
-    color: black;
-    padding: 1em;
-
-    
-}
-.title{
-    color: rgb(148, 127, 9);
-} 
-
-
-h3 
-.red,#redElement {
-    color: rgb(100, 51, 51);
-} 
-/* combinateur de freres et soeurs adjacents */
-h3+p {
-    font-weight: bold;
-    background-color: darkkhaki;
-    color: black;
-    padding: 3em;
-}
-article>p {
+    h3 
+    .red,#redElement {
+        color: rgb(100, 51, 51);
+    } 
+    /* combinateur de freres et soeurs adjacents */
+    h3+p {
+        font-weight: bold;
+        background-color: darkkhaki;
+        color: black;
+        padding: 3em;
+        border-width: 1px solid black; 
+        border-style: groove;
+        border-color: white;
+    }
+    article>p {
     font-weight: bold;
     background-color: darkgrey;
     color: #fff;
@@ -119,8 +198,8 @@ article>p {
 h5 {
     border: 1px rgb(0, 0, 0);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 20px;
     color: red;
+    font-size: 20px;
 }
 
 /* combinateur general de freres et soeurs */
@@ -143,58 +222,54 @@ a:link {
 color: rgb(8, 151, 27);
 }
 a:visited {
-    color: tomato;
+    color: rgb(59, 7, 180);
 }
 /* pour que le texte clignote en couleur */
-div:hover {
-    color: tomato;
-}
+/* div:hover {
+    color: tomat;
+} */
 a:active {
     color: greenyellow;
 }
  
 /* Modele de boite CSS */
 .box {
-    padding: padding: top: 50px; padding: :right 50px; padding: bottom: 50px; padding: :left 50px;
+    padding: 50px; padding: right 50px; padding: bottom 50px; padding: left 50px;
 }
 
 /* Marge */
-div{
-margin-top: 20px; 
-margin-bottom: 30px;
-margin-left: 25px; 
-margin-right: 40px;
-}
+div {
+margin-top: 10px; 
+margin-bottom: 10px;
+margin-left: 15px; 
+margin-right: 20px;
+} 
 
-/* Frontiere */
-.box-1 {
-    border: none;
-}
-.box-2 {
-    border: 5px red;
-}
-.box-3 {
-    border: 5px solid orange;
-}
-.box-4 {
-    border: 5px dashed orange;
-}
-.box-5 {
-    border: dotted orange;
-}
-.box-6 {
-    border: double orange;
-}
-.box-7 {
-    border: groove orange;
-}
-.box-8 {
-    border: ridge orange;
-}
-.box-9 {
-    border: inset orange;
-}
-.box-10 {
-    border: outset orange;
-}
 
+
+/* systeme de grilles */
+
+    /* header { grid-area: topbar; } */
+    /* aside  { grid-area: ads; }
+    article { grid-area:content; }
+    nav { grid-area: sidebar; }
+    footer { grid-area: footer; } */
+
+/* main {
+    grid-template-columns: repeat(1fr 3fr 1fr);
+    grid-auto-rows: minmax(50px, auto);
+} */
+
+/* systeme de grille CSS lines */
+/* .grid-container {
+    display: grid;
+    grid-template-columns: 100px 200px 300px;
+    grid-template-rows: 100px 200px 300px;
+    } */
+/* systeme de grille: affichage */
+/* .item-a {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: row 1- start;
+    grid-column-end: 3;
+} */
